--- a/wp-content/themes/twinspirits/style.css
+++ b/wp-content/themes/twinspirits/style.css
@@ -14,7 +14,6 @@
 
 /* Import Sass mixins, variables, Compass modules, etc. */
 
-.page-header,
 .site-main + aside,
 .site-main > section,
 .entry-header,
